--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.13.2",
     "graphql-yoga": "^1.17.4",
+    "dotenv": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5"
   },
